Quienes somos con imagen
Se realizó la section quienes somos con texto e imagen

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -81,6 +81,21 @@
               </div>
 
         </div>
+    </section>
+    <section class="Nosotros">
+        <h2 class="text-center">Quienes Somos</h2>
+            <div class="container">
+                <div class="row">
+                    <div class="col-6">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit sint cumque distinctio deserunt est rem recusandae beatae illum, tempore porro soluta fugit laudantium inventore magni sunt, quos veniam omnis ad!</p>
+
+                    </div>
+                    <div class="col-6">
+                        <img class="img-fluid"src="https://picsum.photos/id/237/400/300" alt="">
+                    </div>
+
+                </div>
+            </div>
     </section>
 
     <!-- Optional JavaScript; choose one of the two! -->
