--- a/index.html
+++ b/index.html
@@ -97,6 +97,12 @@
                 </div>
             </div>
     </section>
+    <footer class="bg-dark">
+        <div class="container">
+            <p class="text-danger">Contáctanos: ############</p>
+            <p class="text-danger">Todos los derechos reservados. Creado por: Inés María Oliveros</p>
+        </div>
+    </footer>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
