--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Tienda Online</title>
   </head>
   <body>
-    <header>
+    <header class="bg-light">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
@@ -61,13 +61,13 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="https://picsum.photos/seed/picsum/1920/500" class="d-block w-100" alt="...">
+                    <img src="https://picsum.photos/seed/picsum/1920/500" class="d-block w-100" alt="Paisaje de los alpes">
                   </div>
                   <div class="carousel-item">
-                    <img src="https://picsum.photos/seed/picsum/1920/500" class="d-block w-100" alt="...">
+                    <img src="https://picsum.photos/seed/picsum/1920/500" class="d-block w-100" alt="Paisaje de los alpes">
                   </div>
                   <div class="carousel-item">
-                    <img src="https://picsum.photos/seed/picsum/1920/500" class="d-block w-100" alt="...">
+                    <img src="https://picsum.photos/seed/picsum/1920/500" class="d-block w-100" alt="Paisaje de los alpes">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -88,19 +88,20 @@
                 <div class="row">
                     <div class="col-6">
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit sint cumque distinctio deserunt est rem recusandae beatae illum, tempore porro soluta fugit laudantium inventore magni sunt, quos veniam omnis ad!</p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit sint cumque distinctio deserunt est rem recusandae beatae illum, tempore porro soluta fugit laudantium inventore magni sunt, quos veniam omnis ad!</p>
 
                     </div>
                     <div class="col-6">
-                        <img class="img-fluid"src="https://picsum.photos/id/237/400/300" alt="">
+                        <img class="img-fluid"src="https://picsum.photos/id/237/400/300" alt="Mascota, perro">
                     </div>
 
                 </div>
             </div>
     </section>
-    <footer class="bg-dark">
+    <footer class="bg-secondary">
         <div class="container">
             <p class="text-danger">Contáctanos: ############</p>
-            <p class="text-danger">Todos los derechos reservados. Creado por: Inés María Oliveros</p>
+            <p class="text-danger">Todos los derechos reservados. Creado por: Luis Arbey Villegas Rojas</p>
         </div>
     </footer>
 
