Se creó sección servicios
Se creó carpeta con imágenes y la sección servicios con una grid card de 3 imágenes.

--- a/index.html
+++ b/index.html
@@ -98,6 +98,43 @@
                 </div>
             </div>
     </section>
+    <section class="servicios">
+      <h2 class="text-center my-3">Servicios</h2>
+      <div class="container">
+        <div class="row">
+          <div class="col-4">
+            <div class="card" style="width: 18rem;">
+              <img src="img/pexels-airam-datoon.jpg" class="object-fit-md" class="card-img-top" alt="médico chequea a una mujer en una camilla" style="height: 200px;">
+              <div class="card-body">
+                <h5 class="card-title">Consulta médica</h5>
+                <p class="card-text">Nuestros médicos los atienden en jornada continua.</p>
+                <a href="#" class="btn btn-primary">Ver más</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="card" style="width: 18rem;">
+              <img src="img/pexels-leeloo-thefirst.jpg" class="object-fit-md" class="card-img-top" alt="cuarto de hospitalización vacío" style="height: 200px;">
+              <div class="card-body">
+                <h5 class="card-title">Hospitalización</h5>
+                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+                <a href="#" class="btn btn-primary">Ver más</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="card" style="width: 18rem;">
+              <img src="img/pexels-medhat-ayad.jpg" class="object-fit-md" class="card-img-top" alt="médico hace ecografía a mujer" style="height: 200px;">
+              <div class="card-body">
+                <h5 class="card-title">Obstetricia</h5>
+                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+                <a href="#" class="btn btn-primary">Ver más</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <footer class="bg-dark text-light py-2 mt-2">
       <div class="container">
         <div class="row">
