--- a/index.html
+++ b/index.html
@@ -135,6 +135,41 @@
         </div>
       </div>
     </section>
+    <section class="contactanos">
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+            <h2 class="text-center my-3">Contáctanos</h2>
+            <form>
+              <div class="mb-3">
+                <label for="nombre" class="form-label">Nombres</label>
+                <input type="text" class="form-control" id="nombre" aria-describedby="nombre">
+                <div id="nombre" class="form-text">Digita tu nombre</div>
+              </div>
+              <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Correo electrónico</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <div id="emailHelp" class="form-text">Nunca compartiremos su correo electrónico con nadie más.</div>
+              </div>
+              <div class="mb-3">
+                <label for="asunto" class="form-label">Asunto</label>
+                <input type="text" class="form-control" id="asunto" aria-describedby="asunto">
+                <div id="asunto" class="form-text">De qué tema vas a hablarnos</div>
+              </div>
+              <div class="mb-3">
+                <label for="mensaje" class="form-label">Mensaje</label>
+                <textarea class="form-control" name="mensaje" cols="30" rows="5" ></textarea>
+                <div id="mensaje" class="form-text">Escribe tu mensaje</div>
+              </div>
+              <button type="submit" class="btn btn-primary">Enviar</button>
+            </form>
+          </div>
+          <div class="col-6">
+
+          </div>
+        </div>
+      </div>
+    </section>
     <footer class="bg-dark text-light py-2 mt-2">
       <div class="container">
         <div class="row">
